# django_dronov

./: .flake8  README.md  pyproject.toml  requirements.txt
.github/workflows/: my-project-dev.yml
samplesite/bboard/: admin.py  models.py  views.py
samplesite/bboard/migrations/: 0001_initial.py  0002_rubric_alter_bb_options_alter_bb_content_and_more.py
samplesite/bboard/static/bboard/: style.css
samplesite/bboard/templates/bboard/: by_rubric.html  create.html  index.html
samplesite/bboard/templates/layout/: basic.html
samplesite/samplesite/: settings.py
