[tool.poetry]
name = "Django Dronov"
version = "0.1.0"
description = ""
authors = ["Ihar Shauchuk <shauchuk.ihar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^4.0.1"
Django = "^4.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
